Add: class ytchannel (YouTube channel)

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -322,7 +322,7 @@
       </li>
       <li>Carey, Bridget:
         <a href="https://www.youtube.com/watch?v=Y0otgRmscUk">Google Duplex: We need to talk about the ethics</a>
-        (CNet on YouTube, 6 minutes, 09.05.2018). Bridget Carey thinks Google took the <abbr>AI</abbr> too far
+        (<i class="ytchannel">CNet</i> on YouTube, 6 minutes, 09.05.2018). Bridget Carey thinks Google took the <abbr>AI</abbr> too far
         by not making Google Duplex to identify itself as a digital assistant to the people it calls.
         This is a form of deception.
         The video is part of the article
@@ -565,7 +565,7 @@
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=EFHyzuqjaok">A Trump Speech Written By Artificial Intelligence</a>
-        (The New Yorker on YouTube, 4 minutes, 27.07.2017).
+        (<i class="ytchannel">The New Yorker</i> on YouTube, 4 minutes, 27.07.2017).
         <br />For this video, <i class="magazine">The New Yorker</i> <q>fed 270,000 words spoken by Donald Trump
         into a computer program that studies language patterns. This system analyzed his word choice and grammar, learning how to simulate Trump's speech.</q>
         They then let the program output sentences at increasing levels of &ldquo;word-choice creativity&rdquo;.
@@ -866,7 +866,7 @@
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=Bi7f1JSSlh8">Most Research in Deep Learning is a Total Waste of Time - Jeremy Howard</a>
-        (Lex Fridman on YouTube, 5 minutes, 10.09.2019).
+        (<i class="ytchannel">Lex Fridman</i> on YouTube, 5 minutes, 10.09.2019).
         <br />This is an excerpt from a conversation with Jeremy Howard. Howard says that most research on deep learning is a waste of time
         because researchers focus on problems where they can make a bit of progress in a topic that is already well researched
         instead of focusing on real-world problems. This is because they want to get published, so they need to work in an area
@@ -944,11 +944,11 @@
       </li>
       <li>McMullen, Giles:
         <a href="https://www.youtube.com/watch?v=itzmu0l93wM">How to get started in machine learning - best books and sites for machine learning</a>
-        (Python Programmer on YouTube, 9 minutes, 22.12.2017).
+        (<i class="ytchannel">Python Programmer</i> on YouTube, 9 minutes, 22.12.2017).
       </li>
       <li>McMullen, Giles:
         <a href="https://www.youtube.com/watch?v=tGyfmzuR4d4">Machine Learning is Just Mathematics! Free Machine Learning Resources</a>
-        (Python Programmer on YouTube, 8 minutes, 27.09.2019).
+        (<i class="ytchannel">Python Programmer</i> on YouTube, 8 minutes, 27.09.2019).
         <br />In order to really understand machine learning, you need to be confident in linear algebra, calculus, probability and statistics.
         Linear algebra involves the manipulation of matrices. You need descriptive statistics to better understand the data, normalise the data, etcetera.
         When you have built a model, you need calculus to reduce the arrow function.
@@ -983,7 +983,7 @@
       </li>
       <li>Alva:
         <a href="https://www.youtube.com/watch?v=vEBYLnHacQM">Machine Learning Books for Beginners</a>
-        (Alva Liu on YouTube, 7 minutes, 19.04.2018).
+        (<i class="ytchannel">Alva Liu</i> on YouTube, 7 minutes, 19.04.2018).
         <br />Alva is a master student in machine learning and presents the textbooks she used for her courses:
         <i class="booktitle">An Introduction to Statistical Learning</i> by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani (easy to understand; covers the fundamentals),
         <i class="booktitle">Pattern Recognition and Machine Learning</i> by Christopher Bishop (contains a lot of probability and linear algebra),
@@ -1019,7 +1019,7 @@
         A <a href="http://shop.oreilly.com/product/0636920142874.do">preview of the second edition</a> was released in November 2018.
         For a raving review, see Giles McMullen's YouTube video
         <a href="https://www.youtube.com/watch?v=1RiFIYwuwHM">Is this the BEST BOOK on Machine Learning? Hands On Machine Learning Review</a>
-        (Python Programmer on YouTube, 6 minutes, 24.01.2019).
+        (<i class="ytchannel">Python Programmer</i> on YouTube, 6 minutes, 24.01.2019).
         Giles stresses that this is a <em>practical</em> book that helps you implement what it teaches
         and that there are better books if you are interested in the <em>theory</em> of machine learning.
       </li>
