Ritual and Sacrifice (erenow.net)

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -462,6 +462,10 @@
       <li>Murphy, M. D.:
         <a href="https://anthropology.ua.edu/Faculty/murphy/419/419www.htm">Web Jump Station for the Anthropology of Religion</a>.
       </li>
+      <li>
+        <a href="https://erenow.net/ancient/ancient-greece-and-rome-an-encyclopedia-for-students-4-volume-set/390.php">Ritual and Sacrifice</a>,
+        from <i class="booktitle">Ancient Greece and Rome: An Encyclopedia for Students</i> (4 Volume Set) by Carroll Moulton.
+      </li>
     </ul>
 
     <!--@@todo section or page about atheism:
