Add: Britannica: Theories of the origin of sacrifice

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -466,6 +466,10 @@
         <a href="https://erenow.net/ancient/ancient-greece-and-rome-an-encyclopedia-for-students-4-volume-set/390.php">Ritual and Sacrifice</a>,
         from <i class="booktitle">Ancient Greece and Rome: An Encyclopedia for Students</i> (4 Volume Set) by Carroll Moulton.
       </li>
+      <li>
+        <a href="https://www.britannica.com/topic/sacrifice-religion/Theories-of-the-origin-of-sacrifice">Theories of the origin of sacrifice</a>,
+        <i class="booktitle">Encylopaedia Britannica</i>.
+      </li>
       <li>Lewis, Joseph:
         <a href="http://apatheticagnostic.com/articles/reflections/ref04/ref069.html">Names of Gods Taboo</a>,
         <i class="blog">Apathetic Agnostic Church</i>, 09.11.2007.
