Durkheim: Les Formes élémentaires de la vie religieuse

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -476,6 +476,11 @@
         This article claims, among other things, that
         <q>The taboo against mentioning names has the same genesis as the prohibition against making graven images.</q>
       </li>
+      <li lang="fr">Durkheim, Émile:
+        <i class="booktitle">Les Formes élémentaires de la vie religieuse</i>. [1912] <abbr>CNRS</abbr> Editions, 2014. (644 pages)
+        <a href="https://www.cnrseditions.fr/catalogue/anthropologie-et-mondes-contemporains/les-formes-elementaires-de-la-vie-religieuse/" hreflang="fr"><abbr>ISBN</abbr> 9782271081681</a>.
+        <!-- https://fr.wikipedia.org/wiki/Les_Formes_%C3%A9l%C3%A9mentaires_de_la_vie_religieuse -->
+      </li>
     </ul>
 
     <!--@@todo section or page about atheism:
