Add: Caillois: L'homme et le sacré

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -481,6 +481,9 @@
         <a href="https://www.cnrseditions.fr/catalogue/anthropologie-et-mondes-contemporains/les-formes-elementaires-de-la-vie-religieuse/" hreflang="fr"><abbr>ISBN</abbr> 9782271081681</a>.
         <!-- https://fr.wikipedia.org/wiki/Les_Formes_%C3%A9l%C3%A9mentaires_de_la_vie_religieuse -->
       </li>
+      <li lang="fr">Caillois, Roger: <i class="booktitle">L'hommet et le sacré</i>. [1950] Folio Essais. Gallimard, 1988. (256 pages)
+        <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/L-homme-et-le-sacre" hreflang="fr"><abbr>ISBN</abbr> 9782070324576</a>.
+      </li>
     </ul>
 
     <!--@@todo section or page about atheism:
