Add: Oughourlian: Notre troisième cerveau

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -644,6 +644,10 @@
         <i class="booktitle">The Mimetic Brain</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2016. (228 pages)
         <a href="http://msupress.org/books/book/?id=50-1D0-3F7D"><abbr>ISBN</abbr> 9781611861891</a>.
       </li>
+      <li><span lang="fr">Oughourlian, Jean-Michel:
+        <i class="booktitle">Notre troisième cerveau</i>. Albin Michel, 2013.</span> (336 pages)
+        <a href="https://www.albin-michel.fr/ouvrages/cet-autre-qui-mobsede-9782226326546" hreflang="fr"><abbr>ISBN</abbr> 9782226326546</a>.
+      </li>
       <li lang="de">Palaver, Wolfgang:
         <a href="https://www.uibk.ac.at/theol/leseraum/texte/631.html">Der mimetische Zirkel (Gewalt und der "Gott der Opfer")</a>.
         <i class="journal">Lernort Gemeinde. Zeitschrift für theologische Praxis</i>, 24/1 (2006): 17-20.
