Add: Oughourlian: Cet autre qui m'obsède

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -648,6 +648,10 @@
         <i class="booktitle">Notre troisième cerveau</i>. Albin Michel, 2013.</span> (336 pages)
         <a href="https://www.albin-michel.fr/ouvrages/cet-autre-qui-mobsede-9782226326546" hreflang="fr"><abbr>ISBN</abbr> 9782226326546</a>.
       </li>
+      <li><span lang="fr">Oughourlian, Jean-Michel:
+        <i class="booktitle">Cet autre qui m’obsède</i>. Albin Michel, 2017.</span> (160 pages)
+        <a href="https://www.albin-michel.fr/ouvrages/notre-troisieme-cerveau-9782226245717" hreflang="fr"><abbr>ISBN</abbr> 9782226245717</a>.
+      </li>
       <li lang="de">Palaver, Wolfgang:
         <a href="https://www.uibk.ac.at/theol/leseraum/texte/631.html">Der mimetische Zirkel (Gewalt und der "Gott der Opfer")</a>.
         <i class="journal">Lernort Gemeinde. Zeitschrift für theologische Praxis</i>, 24/1 (2006): 17-20.
