Add class .ytchannel (YouTube)

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -920,70 +920,70 @@
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=GIwEs1RkiX4" lang="fr">René Girard - Entretien avec Jacques Chancel (1978)</a>
-        (René Girard Archives on YouTube, 58 minutes, 29.04.2016).
+        (<i class="ytchannel">René Girard Archives</i> on YouTube, 58 minutes, 29.04.2016).
         This is an audio recording of an interview by the journalist Jacques Chancel in Radioscopie (France Inter) on 02.11.1978.
         The video has no subtitles.
         <!--Cf. also Artesquieu channel: https://www.youtube.com/watch?v=5PJdPFHSwXE -->
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=ZP6T8Rhv0lI" lang="fr">René Girard&nbsp;: Le christianisme est-il une religion du livre&nbsp;?</a>
-        (Artesquieu on YouTube, 58 minutes, 27.06.2019).
+        (<i class="ytchannel">Artesquieu</i> on YouTube, 58 minutes, 27.06.2019).
         Interview from <span lang="fr">Présence protestante</span>, dated 1996.
       </li>
       <li><span lang="fr">Girard, René</span>:
         <a href="https://www.youtube.com/watch?v=VY23aM_k9XA" lang="fr">René Girard - La Violence au Cœur des Sociétés (2002)</a>
-        (René Girard Archives on YouTube, 84 minutes, 09.11.2015).
+        (<i class="ytchannel">René Girard Archives</i> on YouTube, 84 minutes, 09.11.2015).
         This is a video recording of René Girard's talk at the <span lang="fr">77e Semaine Sociale</span>, focusing on violence,
         on 16.11.2002. Girard's talk is preceded by a 7-minute introduction by Jean Boissonnat.
         The video has no subtitles.
       </li>
       <li><span lang="fr">Girard, René</span>:
         <a href="https://www.youtube.com/watch?v=IIxRSKg9Rgc" lang="fr">René Girard - BNF 1/2 - Le Problème du Sacrifice dans l'Anthropologie Moderne</a>
-        (René Girard Archives on YouTube, 55 minutes, 10.11.2015).
+        (<i class="ytchannel">René Girard Archives</i> on YouTube, 55 minutes, 10.11.2015).
         Recording of a talk given on 21.10.2002.
       </li>
       <li><span lang="fr">Girard, René</span>:
         <a href="https://www.youtube.com/watch?v=3FKYqqzwinA" lang="fr">René Girard - BNF 2/2 - Le Sacrifice dans l'Inde Védique</a>
-        (René Girard Archives on YouTube, 56 minutes, 10.11.2015).
+        (<i class="ytchannel">René Girard Archives</i> on YouTube, 56 minutes, 10.11.2015).
         Recording of a talk given on 22.10.2002 and broadcast on <span lang="fr">France Culture</span>.
       </li>
       <li><span lang="fr">Girard, René</span>:
         <a href="https://www.youtube.com/watch?v=RAMX5AWqKVQ">René Girard - Shakespeare on Passions (2003)</a>
-        (René Girard Archives on YouTube, 45 minutes, 09.11.2005).
+        (<i class="ytchannel">René Girard Archives</i> on YouTube, 45 minutes, 09.11.2005).
         This is a video recording of René Girard's talk at the 2003 Colloquium on Violence and Religion in Innsbruck, Austria, on 20 June 2003.
         The video quality is low, but the audio is good enough; there are subtitles in French.
         <!--Copy without the intro: https://www.youtube.com/watch?v=K9_F5_KtVN8 -->
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=_whSwmXJaAY" lang="fr">René Girard - A propos de la Passion de Gibson (2003)</a>
-        (René Girard Archives on YouTube, 5 minutes, 09.11.2015).
+        (<i class="ytchannel">René Girard Archives</i> on YouTube, 5 minutes, 09.11.2015).
         Interview on <abbr>KTO</abbr> about Mel Gibson's film
         <a href="https://en.wikipedia.org/wiki/The_Passion_of_the_Christ">The Passion of the Christ (2004)</a>.
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=8XpIzVdPwmE" lang="fr">René Girard - Mensonge Romantique et Vérité Romanesque</a>
-        (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
+        (<i class="ytchannel">René Girard Archives</i> on YouTube, 25 minutes, 09.11.2015).
         The first part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>
         first aired on 31 August 2004 on France Inter and rebroadcast on 10 November 2015.
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=SUiWCeOtZyc" lang="fr">René Girard - Le Bouc Emissaire</a>
-        (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
+        (<i class="ytchannel">René Girard Archives</i> on YouTube, 25 minutes, 09.11.2015).
         The second part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=oaZvaS3Y6I4" lang="fr">René Girard - La Raison de Dieu</a>
-        (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
+        (<i class="ytchannel">René Girard Archives</i> on YouTube, 25 minutes, 09.11.2015).
         The third part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=k-wnNwz-cXg" lang="fr">René Girard - Othello ou Hamlet, même défaîte</a>
-        (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
+        (<i class="ytchannel">René Girard Archives</i> on YouTube, 25 minutes, 09.11.2015).
         The fourth part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=hrHGDsDMxEA" lang="fr">René Girard - Le Triangle Nietzschéen</a>
-        (René Girard Archives on YouTube, 25 minutes, 09.11.2015).
+        (<i class="ytchannel">René Girard Archives</i> on YouTube, 25 minutes, 09.11.2015).
         The fifth and last part of a conversation between the philosopher Raphaël Enthoven and <span lang="fr">René Girard</span>.
       </li>
       <li>
@@ -994,7 +994,7 @@
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=36pvMK-BrnM" lang="fr">René Girard - Entretien sur Radio Courtoisie (2005)</a>
-        (Artesquieu on YouTube, 82 minutes, 29.01.2019).
+        (<i class="ytchannel">Artesquieu</i> on YouTube, 82 minutes, 29.01.2019).
       </li>
       <li>
         <a href="https://www.nzz.ch/feuilleton/rene-girard-spricht-ueber-neid-grausamkeit-und-glauben-ld.1464403" hreflang="de" lang="de">René Girard: Warum kämpfen wir? Und wie können wir aufhören?</a>,
@@ -1010,7 +1010,7 @@
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=4w3WUqzfXK4">Rene Girard on Mimetic Desire</a>
-        (imitatio08 on YouTube, 7 minutes, 29.05.2008).
+        (<i class="ytchannel">imitatio08</i> on YouTube, 7 minutes, 29.05.2008).
         This is an excerpt from an interview recorded at the Imitatio Conference on 29 April 2008.
         <br />Full interview:
         <a href="https://www.youtube.com/watch?v=Ak8VXw-9NBQ">Imitatio Conf 2008: Rene Girard Genesis of Mimetic Theory 1</a>
@@ -1020,7 +1020,7 @@
       </li>
       <li><span lang="fr">Girard, René</span>:
         <a href="https://www.youtube.com/playlist?list=PL75D1242EC54E641F">Scapegoating at Çatalhöyük</a>
-        (ImitatioVideo on YouTube, 2013). This is a YouTube playlists containing videos of René Girard's talk
+        (<i class="ytchannel">ImitatioVideo</i> on YouTube, 2013). This is a YouTube playlists containing videos of René Girard's talk
         at the <abbr>COV&amp;R</abbr> conference in Riverside, California, in June 2008.
         <!--Same talk/videos combined into a single video: https://www.youtube.com/watch?v=fzLSPHteh1M posted by Intellectual Deep Web, 01.06.2019 -->
       </li>
@@ -1053,7 +1053,7 @@
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=Y8o-bjw8rXk">Why Should Anyone Care About Mimetic Theory?</a>
-        (RavenCast on YouTube, 2 minutes, 24.07.2013).
+        (<i class="ytchannel">RavenCast</i> on YouTube, 2 minutes, 24.07.2013).
       </li>
       <li>Becklo, Matthew:
         <a href="https://www.wordonfire.org/resources/blog/beasts-of-no-nation-the-violent-and-the-sacred-and-rene-girard/19627/">“Beasts of No Nation”: The Violent and the Sacred and René Girard</a>,
