Add: Tarot: Le symbolique et le sacré

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -481,8 +481,15 @@
         <a href="https://www.cnrseditions.fr/catalogue/anthropologie-et-mondes-contemporains/les-formes-elementaires-de-la-vie-religieuse/" hreflang="fr"><abbr>ISBN</abbr> 9782271081681</a>.
         <!-- https://fr.wikipedia.org/wiki/Les_Formes_%C3%A9l%C3%A9mentaires_de_la_vie_religieuse -->
       </li>
-      <li lang="fr">Caillois, Roger: <i class="booktitle">L'hommet et le sacré</i>. [1950] Folio Essais. Gallimard, 1988. (256 pages)
+      <li lang="fr">Caillois, Roger: <i class="booktitle">L'homme et le sacré</i>. [1950] Folio Essais. Gallimard, 1988. (256 pages)
         <a href="http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-essais/L-homme-et-le-sacre" hreflang="fr"><abbr>ISBN</abbr> 9782070324576</a>.
+      </li>
+      <li lang="fr">Tarot, Camille: <i class="booktitle">Le symbolique et le sacré. Théories de la religion</i>. La Découverte, 2008. (912 pages)
+        <a href="https://editionsladecouverte.fr/catalogue/index-Le_symbolique_et_le_sacr__-9782707154286.html" hreflang="fr"><abbr>ISBN</abbr> 9782707154286</a>.
+        <br />
+        <q>La question de la religion – de son essence, de sa fonction, de son origine – a été centrale dans la sociologie et l’anthropologie classiques.
+        Pour la tirer des impasses et de la stagnation où elle est reléguée de nos jours, Camille Tarot propose ici un bilan critique des œuvres des meilleurs comparatistes, à travers leurs théories si contradictoires de la religion. Huit auteurs principaux sont soumis à examen&nbsp;:
+        Émile Durkheim, Marcel Mauss, Mircea Eliade, Georges Dumézil, Claude Lévi-Strauss, René Girard, Pierre Bourdieu et Marcel Gauchet.</q>
       </li>
     </ul>
 
