--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -640,7 +640,7 @@
         <i class="booktitle">The Book of Imitation and Desire: Reading Milan Kundera with Rene Girard </i>. Bloomsbury, 2013 (2014: paperback). (208 pages)
         <a href="https://www.bloomsbury.com/uk/the-book-of-imitation-and-desire-reading-milan-kundera-with-rene-girard-9781628925234/"><abbr>ISBN</abbr> 9781628925234</a>.
       </li>
-      <li>Oughourlian, Jean-Michel:
+      <li><span lang="fr">Oughourlian, Jean-Michel</span>:
         <i class="booktitle">The Mimetic Brain</i>. Studies in Violence, Mimesis, &amp; Culture. Michigan State University Press, 2016. (228 pages)
         <a href="http://msupress.org/books/book/?id=50-1D0-3F7D"><abbr>ISBN</abbr> 9781611861891</a>.
       </li>
