Add: link to new page.

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -48,6 +48,7 @@
       <li><a href="../humanities/index.html">Humanities</a>
         <ul>
           <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a></li>
+          <li><a href="../humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a></li>
         </ul>
       </li>
     </ul>
@@ -93,6 +94,7 @@
     </ul>
 
     <h2>Ethics or Morality Without Religion</h2>
+    <p>Links are sorted in chronological order.</p>
     <ul>
       <li>Singer, Peter:
         <a href="https://www.youtube.com/watch?v=I5WA9I4AaFg">Ethics Without Religion</a>
@@ -172,8 +174,6 @@
         <a href="http://www.ethics.be/ethics/index.php?LAN=N" hreflang="nl" lang="nl">Ethics.be (Nederlands)</a>:
         websites that describes itself as
         <q>the Belgian reference point for ethical-related issues and research</q>.
-      </li>
-      <li>
       </li>
       <li>Curry, Oliver Scott:
         <a href="https://evolution-institute.org/the-seven-moral-rules-found-all-around-the-world/">Seven Moral Rules Found All Around the World</a>,
