Add: Tremblay: The Case for Objective Morality

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -96,6 +96,10 @@
     <h2>Ethics or Morality Without Religion</h2>
     <p>Links are sorted in chronological order.</p>
     <ul>
+      <li>Tremblay, Francois:
+        <a href="http://www.strongatheism.net/library/philosophy/case_for_objective_morality/">The Case for Objective Morality</a>,
+        <i class="website">strongatheism.net</i>, last updated 01.01.2005.
+      </li>
       <li>Singer, Peter:
         <a href="https://www.youtube.com/watch?v=I5WA9I4AaFg">Ethics Without Religion</a>
         (YouTube, 55 minutes, 26.04.2011): talk at the Global Atheist Convention in Melbourne, Australia, March 2010.
