Add: Prinz: Do Atheists Pose a Threat to Morality?

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -100,6 +100,10 @@
         <a href="http://www.strongatheism.net/library/philosophy/case_for_objective_morality/">The Case for Objective Morality</a>,
         <i class="website">strongatheism.net</i>, last updated 01.01.2005.
       </li>
+      <li>Prinz, Jesse:
+        <a href="https://www.psychologytoday.com/us/blog/experiments-in-philosophy/200806/do-atheists-pose-threat-morality">Do Atheists Pose a Threat to Morality?</a>,
+        <i class="blog">Psychology Today blog</i>, 25.06.2008.
+      </li>
       <li>Singer, Peter:
         <a href="https://www.youtube.com/watch?v=I5WA9I4AaFg">Ethics Without Religion</a>
         (YouTube, 55 minutes, 26.04.2011): talk at the Global Atheist Convention in Melbourne, Australia, March 2010.
