Add class .ytchannel (YouTube)

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -338,7 +338,7 @@
       </li>
       <li>Raval, Siraj:
         <a href="https://www.youtube.com/watch?v=YzfdL58virc">How to Learn Mathematics Fast</a>
-        (Siraj Raval on YouTube, 11 minutes, 19.01.2018).
+        (<i class="ytchannel">Siraj Raval</i> on YouTube, 11 minutes, 19.01.2018).
       </li>
     </ul>
 
