Add: What are the branches of statistics? (Cross Validated SE)

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -147,6 +147,10 @@
         <a href="https://stats.stackexchange.com/q/376920/122650">The Book of Why by Judea Pearl: Why is he bashing statistics?</a>
         on Cross Validated on Stack Exchange.
       </li>
+      <li>
+        <a href="https://stats.stackexchange.com/questions/430259/what-are-the-branches-of-statistics">What are the branches of statistics?</a>
+        This question was posted on Cross Validated Stack Exchange in October 2019 and has several answers.
+      </li>
     </ul>
 
     <p>Probability can be very counter-intuitive, see for example the Monty Hall paradox.</p>
