Add: Withrow: Can You Be Good Without God?

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -113,6 +113,14 @@
         (YouTube, 14 minutes, 26.01.2016).
         <!--@@rewatch-->
       </li>
+      <li>Withrow, Brandon:
+        <a href="http://www.thedailybeast.com/can-you-be-good-without-god">Can You Be Good Without God?</a>,
+        <i class="website">Daily Beast</i>, 02.09.2017, updated 03.O9.2017.
+        <br />This article reports on research that show that believers tend to have a moral prejudice agaiinst atheists.
+        The research does not provide evidence that this prejudice is justified.
+        See <a href="https://www.nature.com/articles/s41562-017-0151">Global evidence of extreme intuitive moral prejudice against atheists</a>
+        in <i class="journal">Nature Human Behaviour</i>, August 2017.
+      </li>
     </ul>
 
     <h2>Ethics or Morality Based on Science</h2>
