Add: Hickson: How a Huguenot philosopher realised that atheists could be virtuous

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -121,6 +121,11 @@
         See <a href="https://www.nature.com/articles/s41562-017-0151">Global evidence of extreme intuitive moral prejudice against atheists</a>
         in <i class="journal">Nature Human Behaviour</i>, August 2017.
       </li>
+      <li>Hickson, Michael W.:
+        <a href="https://aeon.co/ideas/how-a-huguenot-philosopher-realised-that-atheists-could-be-virtuous">How a Huguenot philosopher realised that atheists could be virtuous</a>,
+        <i class="website">Aeon</i>, 18.09.2018 (licence: Creative Commons Attribution-No Derivatives).
+        Michael W. Hickson is assistant professor of philosophy at Trent University in Peterborough, Ontario.
+      </li>
     </ul>
 
     <h2>Ethics or Morality Based on Science</h2>
