Add: Carrier: The Real Basis of a Moral World

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -131,6 +131,10 @@
         <i class="blog">Freethough Blogs</i>, 15.10.2018.
         This blog post comments on Michael W. Hickson's article on Aeon. Mano Singham is a theoretical physicist.
       </li>
+      <li>Carrier, Richard:
+        <a href="https://www.richardcarrier.info/archives/14879">The Real Basis of a Moral World</a>,
+        <i class="website">Richard Carrier</i>, 12.11.2018.
+      </li>
     </ul>
 
     <h2>Ethics or Morality Based on Science</h2>
