Add: Zindler: Ethics Without Gods

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -135,6 +135,11 @@
         <a href="https://www.richardcarrier.info/archives/14879">The Real Basis of a Moral World</a>,
         <i class="website">Richard Carrier</i>, 12.11.2018.
       </li>
+      <li>Zindler, Frank:
+        <a href="https://www.atheists.org/activism/resources/ethics-without-gods/">Ethics Without Gods</a>,
+        <i class="website">American Atheists</i> (no date).
+        Frank Zindler is former President of American Atheists.
+      </li>
     </ul>
 
     <h2>Ethics or Morality Based on Science</h2>
