Add: Miller: The Character Gap. How Good Are We?

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -210,6 +210,14 @@
         websites that describes itself as
         <q>the Belgian reference point for ethical-related issues and research</q>.
       </li>
+      <li>Miller, Christian B.:
+        <i class="booktitle">The Character Gap. How Good Are We?</i>. Philosophy in Action. Oxford University Press, 2018. (296 pages)
+        <a href="https://global.oup.com/academic/product/the-character-gap-9780190264222"><abbr>ISBN</abbr> 9780190264222</a>.
+        <br />According to the publisher, this book
+        <q>[d]evelops a new and controversial picture of how most people are not good enough to be virtuous but not bad enough to be vicious</q>
+        and
+        <a>[o]ffers many strategies for trying to become better people</a>.
+      </li>
       <li>Curry, Oliver Scott:
         <a href="https://evolution-institute.org/the-seven-moral-rules-found-all-around-the-world/">Seven Moral Rules Found All Around the World</a>,
         <i class="website">The Evolution Institute</i>, 02.03.2012.
