Add Carrier: Sense and Goodness Without God

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -142,6 +142,14 @@
       </li>
     </ul>
 
+    <p>Books on morality and atheism:</p>
+    <ul>
+      <li>Carrier, Richard:
+        <i class="booktitle">Sense and Goodness Without God: A Defense of Metaphysical Naturalism</i>. AuthorHouse, 2005. (444 pages)
+        <a href="https://www.authorhouse.com/en/bookstore/bookdetails/245608-Sense-and-Goodness-Without-God"><abbr>ISBN</abbr> 9781420802931</a>.
+      </li>
+    </ul>
+
     <h2>Ethics or Morality Based on Science</h2>
     <ul>
       <li>Harris, Sam:
