Add Diderot & Gayraud: Pour une morale de l'athéisme

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -148,6 +148,10 @@
         <i class="booktitle">Sense and Goodness Without God: A Defense of Metaphysical Naturalism</i>. AuthorHouse, 2005. (444 pages)
         <a href="https://www.authorhouse.com/en/bookstore/bookdetails/245608-Sense-and-Goodness-Without-God"><abbr>ISBN</abbr> 9781420802931</a>.
       </li>
+      <li><span lang="fr">Diderot, Denis; Gayraud, Joël:
+        <i class="booktitle">Pour une morale de l'athéisme. Entretien d'un philosophe avec la maréchale de***</i>. Mille et une nuits. Fayard, 2007. (64 pages)
+        <a href="https://www.fayard.fr/poche/pour-une-morale-de-latheisme-9782755500370"><abbr>ISBN</abbr> 9782755500370</a>.
+      </li>
     </ul>
 
     <h2>Ethics or Morality Based on Science</h2>
