Add Sinnott-Armstrong: Morality Without God

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -152,6 +152,10 @@
         <i class="booktitle">Pour une morale de l'athéisme. Entretien d'un philosophe avec la maréchale de***</i>. Mille et une nuits. Fayard, 2007. (64 pages)
         <a href="https://www.fayard.fr/poche/pour-une-morale-de-latheisme-9782755500370"><abbr>ISBN</abbr> 9782755500370</a>.
       </li>
+      <li>Sinnott-Armstrong, Walter:
+        <i class="booktitle">Morality Without God?</i>. Oxford University Press, 2011. (192 pages)
+        <a href="https://global.oup.com/academic/product/morality-without-god-9780199841356"><abbr>ISBN</abbr> 9780199841356</a>.
+      </li>
     </ul>
 
     <h2>Ethics or Morality Based on Science</h2>
