Verhostadt: Atheïsme als basis voor de moraal

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -156,6 +156,11 @@
         <i class="booktitle">Morality Without God?</i>. Oxford University Press, 2011. (192 pages)
         <a href="https://global.oup.com/academic/product/morality-without-god-9780199841356"><abbr>ISBN</abbr> 9780199841356</a>.
       </li>
+      <li><span lang="nl">Verhofstadt, Dirk:
+        <i class="booktitle">Atheïsme als basis voor de moraal</i>. Houtekiet, 2013.</span>
+        <a href="http://www.houtekiet.be/boeken/p/detail/atheisme-als-basis-voor-de-moraal"><abbr>ISBN</abbr> 9789089242563</a>.
+        <!--Review: https://www.dewereldmorgen.be/artikel/2013/12/30/atheisme-als-basis-voor-de-moraal-een-rijk-en-moedig-boek/ -->
+      </li>
     </ul>
 
     <h2>Ethics or Morality Based on Science</h2>
