Add Onora Sylvia O'Neill (Wikipedia)

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -285,6 +285,9 @@
         <i class="website">Aeon</i>, 13.06.2018.
         <br />Andy Owen is the author of <i class="booktitle">All Soldier's Run Away: Alano's War, the Story of a British Deserter</i> (2017).
       </li>
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Onora_O%27Neill">Onora Sylvia O'Neill</a> (Wikipedia).
+      </li>
     </ul>
   </main>                           
 
