Add Marsh: One in three councils using algorithms to make welfare decisions

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -881,6 +881,10 @@
         <a href="https://acl2018.org/paper/107">Universal Language Model Fine-tuning for Text Classification</a>.
         <!--@@check paper-->
       </li>
+      <li>Marsh, Sarah:
+        <a href="https://www.theguardian.com/society/2019/oct/15/councils-using-algorithms-make-welfare-decisions-benefits">One in three councils using algorithms to make welfare decisions</a>,
+        <i class="newspaper">The Guardian</i>, 15.10.2019.
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
