Add Brownlee: our First Machine Learning Project in R Step-By-Step

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -996,6 +996,10 @@
         <i class="booktitle">Deep Learning</i> by Ian Goodfellow, Joshua Bendigo and Aaron Courville (a very popular book), and
         <i class="booktitle">Introduction to Time Series and Forecasting</i> by Peter Brockwell and Richard Davis.
       </li>
+      <li>Brownlee, Jason:
+        <a href="https://machinelearningmastery.com/machine-learning-in-r-step-by-step/">Your First Machine Learning Project in R Step-By-Step</a>,
+        <i class="website">Machine Learning Mastery</i>, 03.02.2016.
+      </li>
     </ul>
 
     <p>Books:</p>
