Misc edits: Lippmann (typo), various other edits

--- a/lijst.html
+++ b/lijst.html
@@ -47,6 +47,7 @@
       <li><a href="./humanities/index.html">Humanities</a>
         <ul>
           <li><a href="./humanities/girard_rene.html" lang="fr">René Girard</a></li>
+          <li><a href="./humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a></li>
         </ul>
       </li>
     </ul>
@@ -222,7 +223,7 @@
       <abbr>ISBN</abbr> 978-0141394534 / 
       <a href="http://www.penguinrandomhouse.com/books/274204/the-sleepwalkers-by-arthur-koestler/"><abbr>ISBN</abbr> 978-0140192469</a>. (? 19 €)
     </li>
-    <li>Lindberg, David C.: <i class="booktitle">The Beginnings of Western Science: </i>. 
+    <li>Lindberg, David C.: <i class="booktitle">The Beginnings of Western Science: The European Scientific Tradition in Philosophical, Religious, and Institutional Context, Prehistory to A.D. 1450</i>.
       2nd edition. University of Chicago Press, 2008. (480 pages)
       <a href="http://press.uchicago.edu/ucp/books/book/chicago/B/bo5550077.html"><abbr>ISBN</abbr> 9780226482057</a>. (? 21 €)
     </li>
@@ -340,11 +341,11 @@
       <a href="http://www.seuil.com/ouvrage/la-richesse-cachee-des-nations-gabriel-zucman/9782021114317"><abbr>ISBN</abbr> 9782021114317</a>.
       <span lang="en">(<a href="http://gabriel-zucman.eu/richesse-cachee/" hreflang="fr">Author's website</a>.)</span>
     </li>
-    <li lang="fr">Saporta, Isabelle: <i class="booktitle">Le livre noir de l'agriculture</i>.
+    <!--<li lang="fr">Saporta, Isabelle: <i class="booktitle">Le livre noir de l'agriculture</i>.
       Fayard, 2011. (252 pages)
       <a href="http://www.fayard.fr/le-livre-noir-de-lagriculture-9782213656038"><abbr>ISBN</abbr> 9782213656038</a>.
-      <!-- reprint Pluriel, 2012: http://www.fayard.fr/le-livre-noir-de-lagriculture-9782818502242  -->
-    </li>
+       reprint Pluriel, 2012: http://www.fayard.fr/le-livre-noir-de-lagriculture-9782818502242
+    </li> -->
     <li>Shaxson, Nicholas:
       <i class="booktitle">Treasure Islands: Tax Havens and the Men who Stole the World</i>.
       Vintage, 2012. (384 pages)
@@ -360,19 +361,21 @@
     </li>
   </ul>
 
+  <!--
   <p>The impending end or crisis of capitalism:</p>
   <ul>
     <li lang="de"><del><a href="http://www.mpifg.de/people/ws/publikation_en.asp">Streeck, Wolfgang</a>:
       <i class="booktitle">Gekaufte Zeit - Die vertagte Krise des demokratischen Kapitalismus</i>. Suhrkamp, 2015.
       <a href="http://www.suhrkamp.de/buecher/gekaufte_zeit-wolfgang_streeck_29733.html"><abbr>ISBN</abbr> 978-3-518-29733-9</a>.</del>
+    </li>
+  </ul>
+  -->
       <!--
         * Wolfgang Streeck: "Buying Time: the delayed crisis of democratic capitalism", LSE (92 minutes; uploaded 23.10.2014): https://www.youtube.com/watch?v=B5r9rqgPUVU 
         * Karl Weber: "Zusammenfassung von Wolfgang Streeck’s Studie „Die gekaufte Zeit – Die vertagte Krise des demokratischen Kapitalismus“", Kontrapunkt, 23.01.2014: http://www.rat-kontrapunkt.ch/manifeste-und-debatten/kontrapunkt-debatten/gekaufte-zeit-kontrapunkt-debatten/zusammenfassung-von-wolfgang-streecks-studie-die-gekaufte-zeit-die-vertagte-krise-des-demokratischen-kapitalismus/
         * https://www.perlentaucher.de/buch/wolfgang-streeck/gekaufte-zeit.html 
         * Editie Leesmagazijn: "Gekochte Tijd, Wolfgang Streeck - Ewald Engelen interview and discussion @ Goethe Institut Amsterdam" (05.04.2015: 100 min): https://www.youtube.com/watch?v=fuTLNrHPFZc
       -->
-    </li>
-  </ul>
   <!--
     * Walden Bello: Capitalism's Last Stand? Deglobalization in the Age of Austerity. Zed Books: https://www.zedbooks.net/shop/book/capitalisms-last-stand/ 
   -->
@@ -520,7 +523,7 @@
       <a href="https://en.wikipedia.org/wiki/Crystallizing_Public_Opinion"><abbr>ISBN</abbr> 978-1935439264</a> (reprinted by Ig Publishing).
       <!-- https://www.amazon.de/Crystallizing-Public-Opinion-Edward-Bernays/dp/193543926X/ -->
     </li>
-    <li>Lippann, Walter: <i class="booktitle">The Phantom Public</i> (1925).
+    <li>Lippmann, Walter: <i class="booktitle">The Phantom Public</i> (1925).
       <a href="https://en.wikipedia.org/wiki/The_Phantom_Public"><abbr>ISBN</abbr> 978-1560006770</a>.
     </li>
     <li>Bernays, Edward: <i class="booktitle">Propaganda</i> (1928).
