--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -47,8 +47,8 @@
       </li>
       <li><a href="../humanities/index.html">Humanities</a>
         <ul>
-          <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a>
-          </li>
+          <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a></li>
+          <li><a href="../humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a></li>
         </ul>
       </li>
     </ul>
