Add: Mole: The Sultan's Organ: The diary of Thomas Dallam 1599

--- a/lijst.html
+++ b/lijst.html
@@ -231,6 +231,10 @@
       Faber &amp; Faber, 2012. (480 pages)
       <a href="https://www.faber.co.uk/9780571290222-froissarts-chronicles.html"><abbr>ISBN</abbr> 9780571290222</a>.
     </li>
+    <li>Mole, John:
+      <a href="http://www.fortunebooks.xyz/The%20Sultan%27s%20Organ.htm"><i class="booktitle">The Sultan's Organ: The diary of Thomas Dallam 1599</i></a>.
+      Fortune Books, 2012. <abbr>ISBN</abbr> 978-0-9557569-2-4.
+    </li>
   </ul>
 
   <h2>Economics and Politics</h2>
