Add: Velez: Republican charter school privatization plague infects Puerto Rico. #JuliaGoHome

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2101,6 +2101,10 @@
         <a href="https://truthout.org/video/after-maria-puerto-ricans-cultivate-food-sovereignty-while-fema-delivered-skittles-and-cheez-its/">After Maria, Puerto Ricans Cultivate Food Sovereignty While <abbr>FEMA</abbr> Delivered Skittles and Cheez-Its</a>,
         <i class="website">Truthout</i>, 21.03.2018.
       </li>
+      <li>Velez, Denise Oliver:
+        <a href="https://www.dailykos.com/stories/2018/4/8/1753210/-Republican-charter-school-privatization-plague-infects-Puerto-Rico-JuliaGoHome">Republican charter school privatization plague infects Puerto Rico. #JuliaGoHome</a>,
+        <i class="website">Daily Kos</i>, 08.04.2018.
+      </li>
       <li>Democracy Now:
         <a href="https://www.youtube.com/watch?v=OXoT3PAV7nw">Puerto Rico, “Playground for the Privileged”: Investors Move In as Homes Foreclose &amp; Schools Close</a>
         (YouTube, 17 minutes, 06.06.2018).
