Add Lemoine: L'économie de la Chine

--- a/lijst.html
+++ b/lijst.html
@@ -363,6 +363,10 @@
       China Uncensored: <a href="https://www.youtube.com/watch?v=E5vUaCj0QGI">China's Growing Influence on the West and Its Politics</a> (YouTube, 24 minutes, 23.03.2018) and
       Andrew Podger: <a href="https://theconversation.com/book-review-clive-hamiltons-silent-invasion-chinas-influence-in-australia-93650">Book review – Clive Hamilton’s Silent Invasion: China’s Influence in Australia</a> (<i class="website">The Conversation</i>, 21.03.2018).
     </li>
+    <li lang="fr">Lemoine, Françoise:
+      <i class="booktitle">L'économie de la Chine</i>. Collection Repères. La Découverte, 2006. (128 pages)
+      <a href="https://www.collectionreperes.com/catalogue/index-L___conomie_de_la_Chine-9782707149336.html"><abbr>ISBN</abbr> 9782707149336</a>.
+    </li>
   </ul>
 
   <!--
